package fr.chalodss.spaceinvaders.classes;
/**
 * Enumeration de l'etat dun element
 *
 * */
public enum EState {
    ALIVE, DEAD
}
