package fr.chalodss.spaceinvaders.utils;

import javafx.scene.image.Image;
/**
 * Class pour géré les images existant dans l'application
 * */
public final class Images {


    public static final Image Explotion       = new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\explotion.png", 80, 80, false, false);
    public static final Image PLAYER       = new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\ship.png", 80, 80, false, false);
    public static final Image PLAYER2         = new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\shipin.png", 80, 80, false, false);

    public static final Image BEAM_PLAYER  = new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\rocket.png", 30, 40, false, false);
    public static final Image BEAM_INVADER = new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\beam_invader.png", 5, 25, false, false);

    public static final Image img=new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\img.png",40,40,false,false);
    public static final Image img1=new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\img_1.png",40,40,false,false);
    public static final Image icon=new Image("C:\\Users\\User\\IdeaProjects\\SpaceInvaders\\src\\main\\resources\\images\\logo.png");

    private Images() {

    }

}