@startuml

title __SPACEINVADERS's Class Diagram__\n

  namespace  {
    namespace r.chalodss.spaceinvaders {
      class fr.chalodss.spaceinvaders.Run {
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.AlertController {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Collisions {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Controller {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        enum EState {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Entity {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Game {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Init {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Player {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.Renderer {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace classes {
        class fr.chalodss.spaceinvaders.classes.playController {
        }
      }
    }
  }
  

  namespace  {
    namespace r.chalodss.spaceinvaders {
      namespace utils {
        class fr.chalodss.spaceinvaders.utils.Images {
        }
      }
    }
  }
  

  fr.chalodss.spaceinvaders.Run -up-|> javafx.application.Application
  fr.chalodss.spaceinvaders.classes.AlertController .up.|> javafx.fxml.Initializable
  fr.chalodss.spaceinvaders.classes.Collisions o-- fr.chalodss.spaceinvaders.classes.Entity : explo
  fr.chalodss.spaceinvaders.classes.Controller o-- fr.chalodss.spaceinvaders.classes.Game : game
  fr.chalodss.spaceinvaders.classes.Controller o-- fr.chalodss.spaceinvaders.classes.Player : player
  fr.chalodss.spaceinvaders.classes.Controller o-- fr.chalodss.spaceinvaders.classes.Player : player2
  fr.chalodss.spaceinvaders.classes.Controller o-- fr.chalodss.spaceinvaders.classes.Renderer : renderer
  fr.chalodss.spaceinvaders.classes.Entity -up-|> javafx.scene.image.ImageView
  fr.chalodss.spaceinvaders.classes.Entity o-- fr.chalodss.spaceinvaders.classes.EState : state
  fr.chalodss.spaceinvaders.classes.Game o-- fr.chalodss.spaceinvaders.classes.Player : player
  fr.chalodss.spaceinvaders.classes.Game o-- fr.chalodss.spaceinvaders.classes.Player : player2
  fr.chalodss.spaceinvaders.classes.Player -up-|> javafx.scene.image.ImageView
  fr.chalodss.spaceinvaders.classes.Player o-- fr.chalodss.spaceinvaders.classes.Entity : beam
  fr.chalodss.spaceinvaders.classes.Player o-- fr.chalodss.spaceinvaders.classes.EState : state


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
